refactor: 技能模块持久层统一到 MyBatis-Plus，拆分 Service 层
- MysqlSkillRepository 去掉裸 JDBC 与 DDL 字符串拼接，重写为 SkillMarketMapper 实现；
  新增 SkillMarketEntity / SkillMarketMapper，skill_market 表数据访问统一收口
- 建表兜底移至 SkillMarketMapper.ensureTable()，新增 app.skills.mysql-market.create-table
  配置项（默认 true），生产库可关闭走 docs/scripts/sql 正式变更脚本
- SkillAdminController（433→99 行）拆出 SkillAdminService/Impl：内联 SQL 删除、
  三份重名校验合一、死代码 requireSkillDir 移除、业务异常改抛 ServiceException
  交全局异常处理器；接口路径与响应契约不变
- frontmatter 解析限定在首个 --- 块内，正文同名行不再误匹配
- workspace 根目录统一取 AppProperties.workspace.rootDirectory
  （CopilotAgentFactory / KnowledgeController 不再散落 user.dir 拼接）